[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "wheel", "setuptools_scm>=8"]

[tool.setuptools_scm]
write_to = "src/disco_snake/_version.py"

[tool.black]
line-length = 110
target-version = ['py310']

[tool.mypy]
plugins = "disnake.ext.mypy_plugin"

[tool.ruff]
line-length = 110
target-version = 'py310'
ignore = [
    'F841', # local variable assigned but never used
    'E501', # line too long (black handles this for now)
]
extend-exclude = ["/usr/lib/*"]

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = [
    "ai",
    "cogs",
    "db",
    "disco_snake",
    "exceptions",
    "helpers",
    "logsnake",
    "multisnake",
    "shimeji",
]
known-third-party = ["alembic", "disnake"]

[tool.pyright]
include = ['src/**']
exclude = ['/usr/lib/**']
stubPath = './typings'
