[metadata]
name = disco-snake
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
py_modules =
    disco_snake
    cogs
    extensions
    exceptions
    helpers
    aitextgen
    ailogger
include_package_data = True
install_requires =
    accelerate >= 0.15.0, < 0.16.0
    aiohttp >= 3.8.1, < 4.0.0
    click >= 8.1.3, < 8.2.0
    colorama >= 0.4.5
    daemonocle >= 1.2.3, < 1.3.0
    diffusers >= 0.9.0, < 0.10.0
    disnake ~= 2.7.0
    ftfy >= 6.1.1, < 6.2.0
    humanize >= 4.2.1, < 4.3.0
    logzero >= 1.7.0, < 1.8.0
    openai >= 0.25.0, < 0.26.0
    psutil >= 5.9.1, < 5.10.0
    pynvml >= 11.2.0, < 12.0.0
    torch >= 1.12.0
    transformers >= 4.25.1, < 4.26.0
    uvloop >= 0.17.0, < 0.18.0

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    flake8 >= 4.0.1

[options.entry_points]
console_scripts =
    disco-snake = disco_snake.cli:cli

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv

[mypy]
plugins = disnake.ext.mypy_plugin
