[metadata]
name = disco-snake
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
py_modules =
    disco_snake
    cogs
    exceptions
    helpers
    ai

include_package_data = True
install_requires =
    accelerate >= 0.16.0
    aiohttp >= 3.8.1
    click >= 8.1.3
    colorama >= 0.4.5
    dacite >= 1.8.0, < 1.9.0
    daemonocle >= 1.2.3
    diffusers >= 0.14.0, < 1.0.0
    disnake ~= 2.8.1
    ftfy >= 6.1.1
    #shimeji==git+https://github.com/neggles/shimeji.git@disco-snake#egg=shimeji
    humanize >= 4.2.1
    k_diffusion >= 0.0.14
    levenshtein >= 0.21.0
    openai >= 0.25.0
    pillow >= 9.4.0
    pydantic >= 1.10.0, < 1.11.0
    rich >= 13.0.0
    safetensors >= 0.3.0
    torch >= 2.0.0
    transformers >= 4.26.0, < 5.0.0
    uvloop >= 0.17.0, < 0.18.0
    xformers >= 0.0.16, < 0.0.20

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    pre-commit >= 3.0.0
    ruff >= 0.0.264
    setuptools-scm >= 7.0.5
    mypy >= 0.981

[options.entry_points]
console_scripts =
    disco-snake = disco_snake.cli:cli
    disco-snake-fg = disco_snake.cli:start_bot

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv

[mypy]
plugins = disnake.ext.mypy_plugin
