[metadata]
name = disco-snake
author = Andrew Powers-Holmes
author_email = aholmes@omnom.net
maintainer = Andrew Powers-Holmes
maintainer_email = aholmes@omnom.net
license_files = LICENSE.md

[options]
python_requires = >=3.10
packages = find:
package_dir =
    =src
py_modules =
    ai
    cogs
    db
    disco_snake
    exceptions
    helpers
    webui

include_package_data = True
install_requires =
    aiohttp >= 3.8.1, < 4.0.0
    alembic ~= 1.10.4
    alembic_utils >= 0.8.1
    async_lru ~= 2.0.2
    click ~= 8.1.3
    colorama ~= 0.4.5
    daemonocle >= 1.2.3
    disnake ~= 2.8.1
    ftfy >= 6.1.1
    gradio >= 3.28.0, < 3.31.0
    humanize >= 4.2.1
    langchain >= 0.0.172, < 0.1.0
    levenshtein >= 0.21.0
    loguru >= 0.7.0
    pillow >= 9.5.0
    psycopg ~= 3.1.0
    psycopg-binary ~= 3.1.0
    psycopg-pool ~= 3.1.0
    pydantic ~= 1.10.0
    PyNaCl >= 1.5.0
    python-dotenv ~= 1.0.0
    rich >= 13.0.0
    safetensors ~= 0.3.1
    sentencepiece ~= 0.1.99
    shimeji @ git+https://github.com/neggles/shimeji.git@disco-snake
    sqlalchemy[asyncio] >= 2.0.13, < 2.1.0
    supervisor >= 4.2.5, < 5.0.0
    tokenizers >= 0.13.3
    torch >= 2.0.0, < 2.2.0
    transformers >= 4.29.0, < 5.0.0
    uvloop >= 0.17.0, < 0.18.0
    xformers >= 0.0.16, < 0.0.20

[options.packages.find]
where = src

[options.package_data]
    * = *.txt, *.md

[options.extras_require]
dev =
    black >= 22.3.0
    pre-commit >= 3.0.0
    ruff >= 0.0.264
    setuptools-scm >= 7.0.5
    mypy >= 0.981
    types-tensorflow
    types-protobuf
docs =
    sphinx ~= 6.2.0
    sphinx-rtd-theme ~= 1.2.0

[options.entry_points]
console_scripts =
    disco-snake = disco_snake.cli:cli
    disco-snake-fg = disco_snake.cli:start_bot

[flake8]
max-line-length = 110
ignore =
    F841 # variable assigned but not used; tedious during dev
    F401 # as is "imported module unused"
    E501 # line too long
    # black breaks these two rules:
    E203 # whitespace before :
    W503 # line break before binary operator
extend-exclude =
    .venv

[mypy]
plugins =
    disnake.ext.mypy_plugin
    pydantic.mypy
